--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.1.15"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.3-beta.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
